Remove messages state, refactor code to prepare for loggin

--- a/src/app/modules/auth/forms/login-form/login-form.component.html
+++ b/src/app/modules/auth/forms/login-form/login-form.component.html
@@ -16,7 +16,7 @@
   </div>
 
   <div class="margin-ts">
-    <app-button [text]="'Login'" [fullWidth]="true" (click)="signIn()" [disabled]="loginForm.invalid" class="centered"></app-button>
+    <app-button [text]="'LOGIN'" [fullWidth]="true" (click)="signIn()" [disabled]="loginForm.invalid" class="centered"></app-button>
   </div>
 
 </form>
