Place forms in components folder

--- a/src/app/modules/auth/pages/login/login.component.html
+++ b/src/app/modules/auth/pages/login/login.component.html
@@ -5,6 +5,9 @@
 <div class="centered-h content">
   <div class="segment centered">
     <div class="bg-white margin-s padding-s relative login chart">
+      <div>
+        <p>Logged In : {{ loggedIn$ | async }}</p>
+      </div>
       <div class="bordered-b shaded">
         <div class="centered login-header">
           <h3>AccountPlus</h3>
