--- a/src/app/modules/auth/components/login-form/login-form.component.html
+++ b/src/app/modules/auth/components/login-form/login-form.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="loginForm" novalidate class="login-form-content relative">
   <div class="form-control margin-ts">
     <label for="login-email" *ngIf="formLabels.email && loginForm.get('email').value.length">
-      Email:
+      Username:
     </label>
     <input type="text" id="login-email" class="margin-t" placeholder="Email" formControlName="email" (focus)="formLabels.email = true">
   </div>
