Login redirects to home closes #10

--- a/src/app/modules/auth/pages/register/register.component.html
+++ b/src/app/modules/auth/pages/register/register.component.html
@@ -14,8 +14,8 @@
       </div>
     </div>
 
-    <div class="bordered full-width row margin-ts steps bg-white ">
-      <div class="col padding-vs step" routerLink="/auth/register" routerLinkActive="active">
+    <div class="bordered full-width row margin-ts steps bg-white">
+      <div class="col padding-vs step chart" routerLink="/auth/register" routerLinkActive="active" >
         <div class="step-icon">
           <fa name="user" class="padding-s color-p"></fa>
         </div>
@@ -57,8 +57,8 @@
     </div>
     <app-loader *ngIf="signingUp"></app-loader>
 
-    <div class="margin-ts height-transition signup-container">
-      <div class="bg-white padding-s full-width margin-rs segment signup-form ">
+    <div class="margin-ts height-transition signup-container ">
+      <div class="bg-white padding-s full-width margin-rs segment signup-form bordered">
         <div class="signup-title">
           <p>Create your personal account</p>
         </div>
