Tests for login form and action

--- a/src/app/modules/auth/pages/login/login.component.html
+++ b/src/app/modules/auth/pages/login/login.component.html
@@ -20,7 +20,7 @@
         </div>
         <div class="errors">
           <div class="error">
-            <p *ngFor="let message of (messages$ | async)">{{message.title}}</p>
+            <!--<p *ngFor="let message of (messages$ | async)">{{message.title}}</p>-->
           </div>
         </div>
         <div class="login-form">
