--- a/src/app/modules/auth/pages/register/register.component.html
+++ b/src/app/modules/auth/pages/register/register.component.html
@@ -71,7 +71,7 @@
         </div>
         <app-register-form></app-register-form>
       </div>
-      <div class="bg-white signup-benefits">
+      <div class="bg-white raised signup-benefits">
         <div class="padding-s bordered-b benefits-title">
           <p>Why AccountPlus?</p>
         </div>
