--- a/src/app/modules/charts/components/bargraph/barchart.component.html
+++ b/src/app/modules/charts/components/bargraph/barchart.component.html
@@ -1,4 +1,4 @@
-<div class="margin-s padding bordered rounded-s chart" [ngStyle]="{'background-color': chart.backgroundColor}">
+<div class="margin-s padding bordered chart" [ngStyle]="{'background-color': chart.backgroundColor}">
   <div class="row">
     <div class="centered col">
       <p class="margin title color-p">{{chart.title}}</p>
