--- a/src/app/modules/shared/components/header/header.component.scss
+++ b/src/app/modules/shared/components/header/header.component.scss
@@ -1,49 +1,55 @@
-.header-wrapper {
-  height: 50px;
+@media (min-width: 992px) {
+  .header-wrapper {
+    height: 50px;
+    position: fixed;
+    z-index: 1020;
+    width: 100%;
 
-  .navigation {
-    display: inline-flex;
+    .navigation {
+      display: inline-flex;
 
-    .logo-wrapper {
-      .logo {
-        p {
-          font-size: 50px;
-          font-weight: 700;
-          margin: 0;
+      .logo-wrapper {
+        .logo {
+          p {
+            font-size: 50px;
+            font-weight: 700;
+            margin: 0;
+          }
         }
       }
-    }
-    .elements {
-      position: relative;
-      display: inline-flex;
-      .element {
-        .main-title {
-          font-size: 20px;
-          height: 60px;
-          position: relative;
 
-          .title {
-            border-left: 2px solid #DADADA;
-            display: inline-flex;
+      .elements {
+        position: relative;
+        display: inline-flex;
+
+        .element {
+          .main-title {
+            font-size: 20px;
+            height: 60px;
+            position: relative;
+
+            .title {
+              border-left: 2px solid #DADADA;
+              display: inline-flex;
+            }
           }
         }
       }
     }
-  }
 
 
-  .options {
-    float: right;
-    display: inline-flex;
+    .options {
+      float: right;
+      display: inline-flex;
 
-    .option {
-      fa {
-        align-self: center;
-        font-size: 20px;
+      .option {
+        fa {
+          align-self: center;
+          font-size: 20px;
+        }
       }
     }
   }
-
 }
 
 //Can be used for the sidebar later
