--- a/src/app/modules/shared/components/header/header.component.html
+++ b/src/app/modules/shared/components/header/header.component.html
@@ -1,11 +1,11 @@
 <div class="row no-padding margin-bs header-wrapper">
   <div class="col">
     <div class="margin options">
-      <a *ngIf="!loggedIn$ | async" class="centered padding option" routerLink="/auth/register">
+      <a *ngIf="!(loggedIn$ | async)" class="centered padding option" routerLink="/auth/register">
         Register
         <fa name="user" class="padding"></fa>
       </a>
-      <div *ngIf="!loggedIn$ | async" class="centered padding option" routerLink="/auth/login">
+      <div *ngIf="!(loggedIn$ | async)" class="centered padding option" routerLink="/auth/login">
         Log In
         <fa name="user" class="padding"></fa>
       </div>
