--- a/src/app/modules/charts/components/piechart/piechart.component.html
+++ b/src/app/modules/charts/components/piechart/piechart.component.html
@@ -1,5 +1,5 @@
 <script src="../../../auth/auth-routing.module.ts"></script>
-<div class="padding-s margin-s bordered raised chart" [ngStyle]="{'background-color': chart.backgroundColor,'width.px': chart.width + 400}">
+<div class="padding-s margin-s bordered raised" [ngStyle]="{'background-color': chart.backgroundColor,'width.px': chart.width + 400}">
   <div class="padding-s margin-bs">
     <p class="centered bold padding">{{chart.title}}</p>
     <p class="centered info color-grey">{{chart.subtitle }}</p>
