--- a/src/app/modules/charts/components/linechart/linechart.component.html
+++ b/src/app/modules/charts/components/linechart/linechart.component.html
@@ -1,4 +1,4 @@
-<div class="margin-s bordered raised chart" [ngStyle]="{'background-color': chart.backgroundColor}">
+<div class="margin-s bordered raised" [ngStyle]="{'background-color': chart.backgroundColor}">
   <div class="padding-s margin-bs">
     <p class="centered bold padding">{{chart.title}}</p>
     <p class="centered info color-grey">{{chart.subtitle }}</p>
