--- a/src/app/modules/dashboard/components/card/card.component.html
+++ b/src/app/modules/dashboard/components/card/card.component.html
@@ -1,4 +1,4 @@
-<div class="raised rounded-s dashboard-report-card"
+<div class="raised dashboard-report-card chart"
 
   [ngStyle]="{
     'background': config.background.color
@@ -14,5 +14,19 @@
 
     </p>
 
+  </div>
+
+  <div class="centered card-value">
+    <p [ngStyle]="{
+      'color': config.title.color
+    }">
+      {{ config.data.value }} {{config.data.unit }}
+    </p>
+  </div>
+
+  <div class="centered card-trend">
+    <fa name="arrow-up" class="padding color-p" *ngIf="config.data.value > config.data.previous"></fa>
+    <fa name="arrow-down" class="padding color-red" *ngIf="config.data.value < config.data.previous"></fa>
+    <p class="color-p"> {{ ((config.data.value - config.data.previous) / config.data.value ) * 100 | number}} % </p>
   </div>
 </div>
