--- a/src/app/modules/dashboard/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard/dashboard.component.html
@@ -14,6 +14,16 @@
   </div>
   <div class="row">
     <div class="col">
+      <app-linechart [chart]="lineChart"></app-linechart>
+    </div>
+  </div>
+  <div class="row" >
+    <div class="col" *ngFor="let graph of barCharts">
+      <app-barchart [chart]="graph"></app-barchart>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
       <app-piechart [chart]="pieChart"></app-piechart>
     </div>
     <div class="col">
@@ -23,9 +33,5 @@
     <!--<app-linechart [chart]="lineChart" [fill]="true"></app-linechart>-->
     <!--</div>-->
   </div>
-  <div class="row" >
-    <div class="col" *ngFor="let graph of barCharts">
-      <app-barchart [chart]="graph"></app-barchart>
-    </div>
-  </div>
+
 </div>
