--- a/src/app/modules/dashboard/components/card/card.component.scss
+++ b/src/app/modules/dashboard/components/card/card.component.scss
@@ -19,9 +19,10 @@
   }
 
   .card-trend {
+    margin-top: 20px;
     fa, p {
       font-family: "DejaVu Sans Mono";
-      font-size: 15px;
+      font-size: 20px;
     }
   }
 }
