--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,7 +42,7 @@ li {
   background: #FFFFFF;
 }
 .bg-red {
-  background: #ff2133;
+  background: #FA7C92;
 }
 .bg-blue {
   background: #1a20ff;
@@ -51,10 +51,10 @@ li {
   background: #c3fff7;
 }
 .color-p {
-  color: #0E5A77;
+  color: #6EC4DB;
 }
 .color-red {
-  background: #ff2133;
+  color: #FA7C92;
 }
 .color-s {
   color: #777529;
