--- a/src/app/modules/dashboard/components/card/card.component.scss
+++ b/src/app/modules/dashboard/components/card/card.component.scss
@@ -1,7 +1,7 @@
 .dashboard-report-card {
   height: 200px;
   width: 400px;
-  background: rgba(238, 250, 232, 0.3);
+  background: #FFFFFF;
   color: white;
 
   .title {
