--- a/src/app/modules/dashboard/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard/dashboard.component.html
@@ -12,9 +12,10 @@
       <app-card class="centered" [config]="card"></app-card>
     </div>
   </div>
+
   <div class="row">
     <div class="col">
-      <app-linechart [chart]="lineChart"></app-linechart>
+      <app-transactions></app-transactions>
     </div>
     <div class="col">
       <app-barchart [chart]="barCharts[0]"></app-barchart>
