--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,9 @@ body, p {
   font-weight: 300;
   font-style: normal;
 }
+body {
+  background: #f5f5f5;
+}
 input {
   box-shadow: none;
   border: none;
@@ -68,7 +71,7 @@ li {
 .row {
   display: inline-flex;
   width: 100%;
-  justify-content: space-around;
+  justify-content: space-between;
   .col {
     width: 100%;
   }
@@ -237,7 +240,7 @@ li {
   position: relative;
   margin-top: 70px;
   height:95vh;
-  background: #f5f5f5;
+  //background: #f5f5f5;
   //background: url("assets/backgrounds/mountain+range.png");
   //background: url("assets/backgrounds/laptop-money-manage.jpg");
   //background: url("https://images.pexels.com/photos/952670/pexels-photo-952670.jpeg?cs=srgb&dl=background-black-colors-952670.jpg&fm=jpg");
