Even spacing using fxflex

--- a/src/app/modules/dashboard/components/transactions/transactions.component.scss
+++ b/src/app/modules/dashboard/components/transactions/transactions.component.scss
@@ -19,6 +19,7 @@
   }
 
   .transaction-table {
+    border-collapse: collapse;
 
     .transaction-list-titles {
       border-bottom: 2px solid #7f7f7f;
@@ -26,13 +27,6 @@
 
     }
 
-    .transaction-list-data {
-      tr {
-        td {
-          border-bottom: 2px solid #7f7f7f;
-        }
-      }
-    }
   }
 
 
