--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,7 @@ body, p {
   font-style: normal;
 }
 body {
-  background: #f5f5f5;
+  background-color: #E6ECF0;
 }
 input {
   box-shadow: none;
@@ -210,19 +210,19 @@ li {
 // Custom borders
 
 .bordered {
-  border: 1px solid #DADADA;
+  border: 1px solid #e6ecf0;
 }
 .bordered-t {
-  border-top: 1px solid #DADADA;
+  border-top: 1px solid #e6ecf0;
 }
 .bordered-r {
-  border-right: 1px solid #DADADA;
+  border-right: 1px solid #e6ecf0;
 }
 .bordered-b {
-  border-bottom: 1px solid #DADADA;
+  border-bottom: 1px solid #e6ecf0;
 }
 .bordered-l {
-  border-left: 1px solid #DADADA;
+  border-left: 1px solid #e6ecf0;
 }
 .circular {
   border-radius: 50%;
