--- a/src/app/modules/shared/components/modal/modal.component.html
+++ b/src/app/modules/shared/components/modal/modal.component.html
@@ -1,3 +1,6 @@
-<p>
-  modal works!
-</p>
+<div class="centered app-modal">
+  <div class="app-modal-body">
+    <ng-content></ng-content>
+  </div>
+</div>
+<div class="app-modal-background"></div>
