--- a/src/app/modules/dashboard/components/transactions/transactions.component.html
+++ b/src/app/modules/dashboard/components/transactions/transactions.component.html
@@ -9,7 +9,7 @@
       <div fxFlex id="deleted">Deleted <span class="title-bar-label bordered">2</span></div>
     </div>
     <div>
-      <app-button [text]="'Add Transaction'" class="add-transaction-button"></app-button>
+      <app-button [text]="'Add Transaction'" class="add-transaction-button" (click)="openModal('custom-modal-1')"></app-button>
     </div>
   </div>
 
@@ -39,7 +39,7 @@
         <span *ngIf="transaction.amount > 0">+</span>{{ transaction.amount | number: '.2' }}
       </td>
       <td class="padding">
-        <p href="">{{ transaction.tag.name }}</p>
+        <a href="">{{ transaction.tag.name }}</a>
       </td>
       <td class="padding">
         <p class="transaction-description"> {{ transaction.description }}</p>
@@ -52,3 +52,10 @@
   </table>
 
 </div>
+
+
+<app-modal id="custom-modal-1" >
+  <h1>A Custom Modal!</h1>
+  <p>Home page text</p>
+  <button (click)="closeModal('custom-modal-1');">Close</button>
+</app-modal>
