--- a/src/app/modules/shared/components/header/header.component.scss
+++ b/src/app/modules/shared/components/header/header.component.scss
@@ -2,7 +2,7 @@
   .header-wrapper {
     height: 50px;
     position: fixed;
-    z-index: 1020;
+    //z-index: 800;
     width: 100%;
 
     .navigation {
