--- a/src/app/modules/dashboard/components/transactions/transactions.component.scss
+++ b/src/app/modules/dashboard/components/transactions/transactions.component.scss
@@ -4,8 +4,29 @@
 
   .title-bar {
     display: flex;
-    border-bottom: 2px solid black;
 
+    .title-bar-option {
+      cursor: pointer;
+      position: relative;
+
+      .title-bar-underline {
+        border-top-left-radius: 3px;
+        border-top-right-radius: 3px;
+        bottom: 0;
+        content: '';
+        display: block;
+        height: 3px;
+        left: 0;
+        margin: 0 8px;
+        position: absolute;
+        right: 0;
+        background-color: #6EC4DB;
+      }
+    }
+
+    .title-bar-option:hover {
+      background: #e4f8ff;
+    }
     #deleted {
       color: #7f7f7f;
     }
@@ -13,6 +34,7 @@
     .add-transaction-button {
       float: right;
     }
+
   }
 
   .title-bar > * {
@@ -30,6 +52,11 @@
       z-index: 1;
     }
 
+    .transaction-list-data {
+      tr {
+        cursor: pointer;
+      }
+    }
   }
 
 }
