--- a/src/app/modules/shared/components/modal/modal.component.html
+++ b/src/app/modules/shared/components/modal/modal.component.html
@@ -1,5 +1,10 @@
 <div class="centered app-modal">
-  <div class="app-modal-body">
+  <div class="app-modal-body"
+       [ngClass]="{
+          'raised': raised
+        }"
+       [@slideAnimation]
+  >
     <ng-content></ng-content>
   </div>
 </div>
