--- a/src/app/modules/dashboard/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard/dashboard.component.html
@@ -23,7 +23,7 @@
       <app-transactions></app-transactions>
     </div>
     <div fxFlex>
-      <app-barchart [chart]="barCharts[0]"></app-barchart>
+      <app-linechart [chart]="lineChart"></app-linechart>
     </div>
   </div>
   <div class="row" >
