--- a/src/app/modules/dashboard/components/transactions/transactions.component.scss
+++ b/src/app/modules/dashboard/components/transactions/transactions.component.scss
@@ -8,7 +8,13 @@
     .title-bar-option {
       cursor: pointer;
       position: relative;
+      transition: all 0.4s cubic-bezier(.25,.8,.25,1);
 
+      .title-group {
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+      }
       .title-bar-underline {
         border-top-left-radius: 3px;
         border-top-right-radius: 3px;
@@ -22,10 +28,11 @@
         right: 0;
         background-color: #6EC4DB;
       }
+
     }
 
     .title-bar-option:hover {
-      background: #e4f8ff;
+      background: #f5f8fa;
     }
     #deleted {
       color: #7f7f7f;
