--- a/src/app/modules/shared/components/button/button.component.scss
+++ b/src/app/modules/shared/components/button/button.component.scss
@@ -1,10 +1,11 @@
 .button-group {
   position: relative;
   .button {
-    //width: 250px;
+    width: 250px;
     height: 50px;
     border: none;
     cursor: pointer;
+    transition: all 0.4s cubic-bezier(.25,.8,.25,1);
   }
 
   .button.disabled {
@@ -29,7 +30,12 @@
     color: white;
     /* height: 100%; */
     font-size: 20px;
-    padding: 13px;
+    padding: 13px 20px;
+  }
+
+  fa.icon-only {
+    position: relative;
+    padding: 0;
   }
 }
 
