--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,10 +26,73 @@ input {
   max-width: 400px;
 }
 input:focus {
-  border: none;
+  border: #6ec4db;
   border-bottom-color: #90bfbc;
   background: white !important;
   box-shadow: none;
+  outline: none;
+}
+
+$primary: #6EC4DB;
+$secondary: #3197EE;
+$background: #E6ECF0;
+
+// Radio Buttons
+.radio {
+  input[type="radio"] {
+    position: absolute;
+    opacity: 0;
+    + .radio-label {
+      &:before {
+        content: '';
+        background: $background;
+        border-radius: 100%;
+        border: 1px solid darken($primary, 25%);
+        display: inline-block;
+        width: 1.4em;
+        height: 1.4em;
+        position: relative;
+        top: -0.2em;
+        margin-right: 1em;
+        vertical-align: top;
+        cursor: pointer;
+        text-align: center;
+        transition: all 250ms ease;
+      }
+    }
+    &:checked {
+      + .radio-label {
+        &:before {
+          background-color: $secondary;
+          box-shadow: inset 0 0 0 4px $background;
+        }
+      }
+    }
+    &:focus {
+      + .radio-label {
+        &:before {
+          outline: none;
+          border-color: $secondary;
+        }
+      }
+    }
+    &:disabled {
+      + .radio-label {
+        &:before {
+          box-shadow: inset 0 0 0 4px $background;
+          border-color: darken($background, 25%);
+          background: darken($background, 25%);
+        }
+      }
+    }
+    + .radio-label {
+      &:empty {
+        &:before {
+          margin-right: 0;
+        }
+      }
+    }
+  }
 }
 li {
   list-style: none;
