Some legit amazing animation

--- a/src/app/modules/dashboard/components/transaction-form/transaction-form.component.scss
+++ b/src/app/modules/dashboard/components/transaction-form/transaction-form.component.scss
@@ -27,6 +27,20 @@
     .transaction-details {
 
     }
+
+    .transaction-tag {
+      position: relative;
+
+      .tag-suggestions {
+        position: absolute;
+        top: 0;
+
+        .tag-suggestion {
+
+        }
+      }
+
+    }
   }
 
 
