--- a/src/app/modules/dashboard/components/transaction-form/transaction-form.component.html
+++ b/src/app/modules/dashboard/components/transaction-form/transaction-form.component.html
@@ -1,5 +1,8 @@
 <form novalidate >
-  <div class="centered transaction-add" appClickOutside (clickOutside)="onClickOutside($event)">
+  <div class="centered transaction-add"
+       appClickOutside
+       (clickOutside)="onClickOutside($event)"
+       >
 
     <input id="transaction-description"
            type="search"
@@ -9,6 +12,7 @@
            [ngClass]="{
             'transaction-description-focus': transactionBoxAnimationState == 'in'
            }">
+
     <div class="bg-white raised transaction-form"
          [@slideInOut]="transactionBoxAnimationState">
       <div *ngIf="transactionBoxAnimationState == 'in'">
@@ -44,9 +48,19 @@
             <input type="number" placeholder="Amount" class="full-width">
           </div>
           <div class="transaction-tag padding-s" fxFlex>
-            <select class="full-width">
-              <option>-------------------</option>
-            </select>
+            <input type="text" placeholder="Tag" name="tag"
+                   class="full-width"
+                   (keyup)="toUpperCase()"
+                  [(ngModel)]="tag">
+            <div class="tags-suggestions raised-light">
+              <div class="tag-suggestion padding bordered-b"
+                   [ngClass]="{'raised-light': _tag.hovered }"
+                   *ngFor="let _tag of suggestedTags"
+                    (mouseenter)="_tag.hovered = true"
+                    (mouseleave)="_tag.hovered = false">
+                {{ _tag.name }}
+              </div>
+            </div>
           </div>
         </div>
 
