--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,11 @@
 @import url('../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css');
 
 @import "variables";
+
+$primary: #6EC4DB;
+$secondary: #3197EE;
+$background: #E6ECF0;
+
 body, p, button {
   margin: 0;
   font-family: "DejaVu Sans";
@@ -18,24 +23,18 @@ body {
 input {
   box-shadow: none;
   border: none;
-  border-bottom: 2px solid #90bfbc;
+  border-bottom: 2px solid $primary;
   min-height: 40px;
   background: white !important;
-  padding: 2px 10px;
   font-size: 16px;
   max-width: 400px;
 }
 input:focus {
-  border: #6ec4db;
-  border-bottom-color: #90bfbc;
   background: white !important;
   box-shadow: none;
   outline: none;
 }
 
-$primary: #6EC4DB;
-$secondary: #3197EE;
-$background: #E6ECF0;
 
 // Radio Buttons
 .radio {
@@ -63,7 +62,7 @@ $background: #E6ECF0;
     &:checked {
       + .radio-label {
         &:before {
-          background-color: $secondary;
+          background-color: $primary;
           box-shadow: inset 0 0 0 4px $background;
         }
       }
