Tricky sticky positioning

--- a/src/app/modules/dashboard/components/card/card.component.html
+++ b/src/app/modules/dashboard/components/card/card.component.html
@@ -1,4 +1,4 @@
-<div class="dashboard-report-card"
+<div class="dashboard-report-card raised-light"
   [ngStyle]="{
     'border-top': '5px solid' + config.title.color
   }">
