--- a/src/app/modules/dashboard/dashboard/dashboard.component.scss
+++ b/src/app/modules/dashboard/dashboard/dashboard.component.scss
@@ -1,9 +1,40 @@
 .container {
   margin-top: 95px;
+
+  .transaction-bar {
+
+    .transaction-add {
+      position: relative;
+      width: 600px;
+
+      input {
+        width: inherit;
+        height: 54px;
+        border-radius: 54px;
+        padding-left: 27px;
+        max-width: inherit;
+      }
+
+      input:focus , input:hover {
+        border-radius: 20px 20px 0 0;
+        position: relative;
+        border: none;
+      }
+
+      .transaction-form {
+        position: absolute;
+        top: 56px;
+        width: inherit;
+        height: 300px;
+        z-index: 99999;
+        border-radius: 0 0 20px 20px;
+      }
+
+    }
+
+  }
 }
 app-modal {
   display: none;
 }
-.transaction-bar {
 
-}
