--- a/src/app/modules/dashboard/components/transaction-form/transaction-form.component.scss
+++ b/src/app/modules/dashboard/components/transaction-form/transaction-form.component.scss
@@ -8,14 +8,24 @@
     border-radius: 54px;
     padding-left: 27px;
     max-width: inherit;
+    overflow: visible;
   }
 
   .transaction-description-focus {
     border-radius: 20px 20px 0 0 !important;
     position: relative;
     border: none;
+    padding-left: 150px !important;
+    padding-top: 2px;
   }
 
+  .description-label {
+    position: absolute;
+    left: 0;
+    z-index: 99999;
+    padding: 0 20px;
+    border-top-left-radius: 20px;
+  }
   .transaction-form {
     position: absolute;
     top: 56px;
@@ -26,6 +36,12 @@
 
     .transaction-details {
 
+    }
+
+    .transaction-amount {
+      input {
+        font-family: "DejaVu Sans Mono";
+      }
     }
 
     .transaction-tag {
