--- a/src/app/modules/dashboard/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard/dashboard.component.html
@@ -2,9 +2,8 @@
   <app-header></app-header>
 </div>
 <div class="content" #content>
-
-  <div class="margin-s container">
-    <div class="margin-s">
+  <div class="margin-s relative container">
+    <div class="margin-s sticky-top high">
       <div class="transaction-bar">
         <app-transaction-form></app-transaction-form>
       </div>
